// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperUpdateButton iconOnly 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes="all"
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes="all"
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton is rendered 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isDisabled 1`] = `
<EuiToolTip
  content={
    <EuiI18n
      default="Cannot update"
      token="euiSuperUpdateButton.cannotUpdateTooltip"
    />
  }
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={true}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={true}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isLoading 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="success"
      fill={true}
      iconType="kqlFunction"
      isDisabled={false}
      isLoading={true}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Updating"
        token="euiSuperUpdateButton.updatingButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="success"
      fill={true}
      iconType="kqlFunction"
      isDisabled={false}
      isLoading={true}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Updating"
        token="euiSuperUpdateButton.updatingButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton needsUpdate 1`] = `
<EuiToolTip
  content={
    <EuiI18n
      default="Click to apply"
      token="euiSuperUpdateButton.clickToApplyTooltip"
    />
  }
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="success"
      fill={true}
      iconType="kqlFunction"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Update"
        token="euiSuperUpdateButton.updateButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="success"
      fill={true}
      iconType="kqlFunction"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Update"
        token="euiSuperUpdateButton.updateButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton responsive can be all 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
        "m",
        "l",
        "xl",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
        "m",
        "l",
        "xl",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton responsive can be false 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes="none"
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes="none"
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton showTooltip 1`] = `
<EuiToolTip
  delay="regular"
  display="inlineBlock"
  position="bottom"
>
  <EuiShowFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={false}
      onClick={[Function]}
      size="m"
      textProps={
        Object {
          "className": "euiScreenReaderOnly",
        }
      }
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiShowFor>
  <EuiHideFor
    sizes={
      Array [
        "xs",
        "s",
      ]
    }
  >
    <EuiButton
      className="euiSuperUpdateButton"
      color="primary"
      fill={true}
      iconType="refresh"
      isDisabled={false}
      isLoading={false}
      minWidth={118}
      onClick={[Function]}
      size="m"
    >
      <EuiI18n
        default="Refresh"
        token="euiSuperUpdateButton.refreshButtonLabel"
      />
    </EuiButton>
  </EuiHideFor>
</EuiToolTip>
`;
